<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_gravity="center"
    tools:context=".ExamActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="90sp"
        android:textColor="#03A9F4"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/exam" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/qOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_1" />
            <TextView
                android:id="@+id/qTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/qThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/qfour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_4" />

            <TextView
                android:id="@+id/qfive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_5" />

            <TextView
                android:id="@+id/qSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_6" />

            <TextView
                android:id="@+id/qSeven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_7" />

            <TextView
                android:id="@+id/qEight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_8" />

            <TextView
                android:id="@+id/qNine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_9" />

            <TextView
                android:id="@+id/qTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="#F3F3F3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/question_10" />

            <Button
                android:id="@+id/btnResult"
                android:layout_width="300sp"
                android:layout_margin="20sp"
                android:layout_marginBottom="40sp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/result" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>